<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            android:textSize="10sp"/>

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites"
            android:textSize="10sp"/>

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            android:textSize="10sp"/>

        <item
            android:id="@+id/about_app"
            android:icon="@drawable/ic_about_app"
            android:title="@string/about_app"
            android:textSize="10sp"/>
    </group>

</menu>